--- a/src/Web/Pages/Index.cshtml
+++ b/src/Web/Pages/Index.cshtml
@@ -39,7 +39,7 @@
     else
     {
         <div class="esh-catalog-items row">
-            THERE ARE NO RESULTS THAT MATCH YOUR SEARCH
+            Redeployed SEARCH
         </div>
     }
 </div>
